# predicting-insurance-claims-occurrence

./: README.md  pyproject.toml
data/output/models/: decision_tree_model.sav  logistic_regression_model.sav
notebooks/: 01.insurance-claim-occurrence-ML_pipeline-updated.ipynb  KeyFindings and Conclusions-detailed.md
