[project]
name = "predicting-insurance-claim-occurrence"
version = "0.2.0"
description = "Predicting insurance claim occurrence using machine learning classification models."
requires-python = ">=3.9"
dependencies = [
  "jupyter>=1.1.1",
  "pandas>=1.3.0",
  "numpy>=1.21.0",
  "scikit-learn>=1.0.0",
  "matplotlib>=3.3.0",
  "seaborn>=0.11.0",
  "joblib>=1.0.0",
  "imbalanced-learn>=0.10.1",
]
